--- a/CUDA1/Part-A/Makefile
+++ b/CUDA1/Part-A/Makefile
@@ -9,7 +9,8 @@
 
 SDK_INSTALL_PATH :=  /cm/shared/apps/cuda11.2/toolkit/11.2.2
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
-LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
+LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/usr/local/cuda
+# LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
 #INCLUDES  :=  -I$(SDK_INSTALL_PATH)/include -I$(SDK_INSTALL_PATH)/samples/common/inc
 OPTIONS   :=  -O3 
 #--maxrregcount=100 --ptxas-options -v 
