--- a/CUDA1/Part-A/Makefile
+++ b/CUDA1/Part-A/Makefile
@@ -15,8 +15,8 @@ LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/l
 OPTIONS   :=  -O3 
 #--maxrregcount=100 --ptxas-options -v 
 
-TAR_FILE_NAME  := YourNameCUDA1.tar
-EXECS :=  vecadd00 matmult00
+TAR_FILE_NAME  := SaherIqbalCUDA1.tar
+EXECS :=  vecadd00 matmult00 vecadd01
 all:$(EXECS)
 
 #######################################################################
