--- a/CUDA1/Part-A/Makefile
+++ b/CUDA1/Part-A/Makefile
@@ -32,11 +32,11 @@ timer.o : timer.cu timer.h
 	${NVCC} $< -c -o $@ $(OPTIONS)
 
 #######################################################################
-#vecaddKernel00.o : vecaddKernel00.cu
-#	${NVCC} $< -c -o $@ $(OPTIONS)
+vecaddKernel00.o : vecaddKernel00.cu
+	${NVCC} $< -c -o $@ $(OPTIONS)
 
-#vecadd00 : vecadd.cu vecaddKernel.h vecaddKernel00.o timer.o
-#	${NVCC} $< vecaddKernel00.o -o $@ $(LIB) timer.o $(OPTIONS)
+vecadd00 : vecadd.cu vecaddKernel.h vecaddKernel00.o timer.o
+	${NVCC} $< vecaddKernel00.o -o $@ $(LIB) timer.o $(OPTIONS)
 
 #######################################################################
 vecaddKernel01.o : vecaddKernel01.cu
